# boardwright-ci-test

./: .gitignore  CHANGELOG.md  NOTICE.md  README.md  ROADMAP.md  SPEC.md  THIRD_PARTY_NOTICES.md  TODO.md  block-diagram.kicad_sch  boardwright-netlist.net  boardwright.kicad_pcb  boardwright.kicad_prl  boardwright.kicad_pro  boardwright.kicad_sch  boardwright.xml  power-sequencing.kicad_sch  project-architecture.kicad_sch  pyproject.toml  revision-history.kicad_sch  subschematic-a.kicad_sch  subschematic-b.kicad_sch
.boardwright/: branches.yaml  legal.yaml  project.yaml  release.env  revision_history.yaml  revision_history_variables.env
3D/: boardwright.step
HTML/: boardwright-navigate.html  boardwright-navigate_3D.html  boardwright-navigate_Images.html  boardwright-navigate_KiCanvas.html  boardwright-navigate_KiRI.html  boardwright-navigate_Manufacturing.html  boardwright-navigate_Manufacturing_Assembly.html  boardwright-navigate_Manufacturing_Fabrication.html  boardwright-navigate_Manufacturing_Fabrication_Drill Tables.html  boardwright-navigate_Manufacturing_Fabrication_Gerbers.html  boardwright-navigate_Reports.html  boardwright-navigate_Schematic.html  boardwright-navigate_Testing.html  boardwright-navigate_Testing_Testpoints.html
KiRI/: commits  project
kibot_yaml/: kibot_main.yaml  kibot_out_csv_bom.yaml  kibot_pre_set_text_variables.yaml
tests/: test_actions.py  test_changelog.py  test_config.py  test_kibot_revision_history.py  test_legal.py  test_preview.py  test_release.py  test_revision_history.py  test_revision_history_script.py  test_sheet_title.py  (+3 more)
(+51 files in other folders)
