[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "boardwright"
version = "0.1.0"
description = "Guided KiCad/KiBot hardware project workflow tooling."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
tui = [
  "textual>=0.80",
]
ui = [
  "textual>=0.80",
]
templates = [
  "Jinja2>=3.1",
]

[project.scripts]
boardwright = "boardwright.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
